# rust_rest_postgres

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-06-10-195301_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
