[package]
name = "rust_rest_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.5.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
env_logger = "0.9.0"

[dependencies.diesel_migrations]
version = "2.0.0"
